--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "v2412_source"]
-	path = v2412_source
+[submodule "openfoam_source"]
+	path = openfoam_source
 	url = https://develop.openfoam.com/Development/openfoam.git
